Change of design to address issue with rendering on iPhones

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 #root {
-    min-height: 100vh;
+    position: fixed;
+    height: 100%;
+    min-width: 100%;
+    overflow-y: auto;
 }
 
 body {
